# igaming-avatar

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: anam_api.py  chat_api.py  config.py  demo_state_loader.py  events.py  llm.py  main.py  modes.py  proactive_bus.py  session_api.py  session_naming.py  state.py  trigger_api.py  voice_api.py
backend/app/prompts/: __init__.py  alex.py  global_state.py  mode_addons.py  persona.py  session_state.py
backend/tests/: test_anam_api.py  test_modes.py  test_prompts.py  test_session_store.py  test_state_loader.py
data/: characters.yaml  demo-state.yaml
docs/: Avatar_AI_Demo_Scenario.docx.md  backlog.md  design-brief.md  dev-task.md
docs/design/iGaming-avatar/: Avatar AI Demo.html
docs/superpowers/specs/: 2026-04-23-avatar-ai-demo-design.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Confetti.tsx
frontend/components/AdminView/: AdminBlock.tsx  AdminView.tsx  TriggerIcon.tsx
frontend/components/AlexWidget/: AlexAvatar.tsx  AnamAvatarPanel.tsx  CollapsedWidget.tsx  DesktopWidget.tsx  InputBar.tsx  MobileWidget.tsx  SpeechBubble.tsx  WidgetHeader.tsx  WidgetTabs.tsx  (+1 more)
frontend/hooks/: useAdmin.ts  useAnamAvatar.ts  useChat.ts  useEvents.ts  useIsMobile.ts  useSession.ts  useVoice.ts
frontend/lib/: api-client.ts  cookies.ts  format.ts  sentence-streamer.ts  sse.ts  types.ts  voice-client.ts
frontend/scripts/: gen_state.mjs
scripts/: generate_portraits.py
(+23 files in other folders)
